rust/kcl-lib/tests/sketch_block_coincident_constraint/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing sketch_block_coincident_constraint.kcl
---
KCL Type error

  × type: assert failed: Expected NaN to be equal to 0 but it wasn't
    ╭─[37:1]
 36 │ 
 37 │ assert(s1.line4.start.at[0], isEqualTo = 0)
    · ─────────────────────┬─────────────────────┬
    ·                      ╰── tests/sketch_block_coincident_constraint/input.kcl
    ·                      ╰── tests/sketch_block_coincident_constraint/input.kcl
 38 │ assert(s1.line4.start.at[1], isEqualTo = 0)
    ╰────
  ╰─▶ KCL Type error
      
        × type: assert failed: Expected NaN to be equal to 0 but it wasn't
          ╭─[37:1]
       36 │
       37 │ assert(s1.line4.start.at[0], isEqualTo = 0)
          · ─────────────────────┬─────────────────────
          ·                      ╰── tests/sketch_block_coincident_constraint/
      input.kcl
       38 │ assert(s1.line4.start.at[1], isEqualTo = 0)
          ╰────
